# Simple-Media-Social

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  config.py  database.py  main.py
backend/models/: base.py
backend/routers/: admin.py  auth.py  interactions.py  me.py  posts.py  users.py
backend/schemas/: auth.py  posts.py  users.py
backend/services/: auth.py  validation.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
